# Neural-Region-Descriptor-Fields

./: .gitignore  README.md  nrdf_env.sh  pyproject.toml
nrdf/model/: decoder.py  encoder.py  imdc_pointnet_occupancy_net.py  inverse_descriptor_fn.py
nrdf/training/: chamfer_new.py  dataset_onet_m.py  loss_topo.py  losses.py  training.py
nrdf/utils/: path_util.py  util.py
scripts/: run_train_nrdf_subprocess.py  train_nrdf_occ.py  train_nrdf_occ_self_recon.py  train_nrdf_occ_self_recon_cross_recon.py
